# tensou

./: .gitignore  CHANGELOG.md  Cargo.toml  Packager.toml  README.md  release-plz.toml  slintcn.json  slintcn.lock.json
.github/workflows/: release-plz.yml  release.yml
assets/: icon.icns
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: lib.rs  recieve.rs  send.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: config.rs  crypto.rs  discovery.rs  disk.rs  lib.rs  net.rs  protocol.rs  util.rs
crates/core/src/disk/: reader.rs  staging.rs  writer.rs
crates/core/src/net/: connection_manager.rs  recv.rs  send.rs
crates/core/src/protocol/: manifest.rs  types.rs
crates/core/tests/: disk.rs  net.rs
crates/gui/: CHANGELOG.md  Cargo.toml
crates/gui/src/: background.rs  callbacks.rs  lib.rs  state.rs  views.rs
crates/gui/ui/: app.slint  components.slint  globals.slint  send-view.slint  settings-view.slint  transfers-view.slint  types.slint
crates/gui/ui/slintcn/components/: dialog-panel.slint  dialog.slint
crates/gui/ui/slintcn/theme/: tokens.slint
src/: cli.rs  config.rs  discovery.rs  disk.rs  gui.rs  lib.rs  main.rs  net.rs  protocol.rs
src/cli/: recieve.rs  send.rs
src/gui/: background.rs  callbacks.rs  commands.rs  state.rs  views.rs
src/net/: recv.rs  send.rs
ui/: app.slint  components.slint  globals.slint  send-view.slint  settings-view.slint  transfers-view.slint  types.slint
