[package]
name = "tensou"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.102"
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
gethostname = "1.1.0"
indicatif = "0.18.4"
mdns-sd = "0.20.0"
quinn = "0.11.9"
rcgen = "0.14.8"
rmp-serde = "1.3.1"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
rand = "0.10.1"
dialoguer = "0.12.0"
async-trait = "0.1.89"
tokio-util = "0.7.18"
slint = { version = "1.17.0", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software", "software-renderer-path"] }
rfd = "0.17.2"

[build-dependencies]
slint-build = "1.17.0"

[dev-dependencies]
file_diff = "1.0.0"
tempfile = "3.27.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true          # Enable Link-Time Optimization (LTO)
codegen-units = 1   # Limit to 1 codegen unit to enable full LTO optimizations
panic = "abort"     # Remove unwinding information (reduces binary size)
strip = true        # Automatically strip debug symbols from binary
