[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui"
]

[workspace.dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
rand = "0.10.1"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"

tensou-core = { path = "crates/core" }
tensou-cli = { path = "crates/cli" }
tensou-gui = { path = "crates/gui" }

[dependencies]
tensou-core = { workspace = true }
tensou-cli = { workspace = true }
tensou-gui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }

[package]
name = "tensou"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true          # Enable Link-Time Optimization (LTO)
codegen-units = 1   # Limit to 1 codegen unit to enable full LTO optimizations
panic = "abort"     # Remove unwinding information (reduces binary size)
strip = true        # Automatically strip debug symbols from binary
