[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui"
]

[workspace.dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
rand = "0.10.1"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }

tensou-core = { path = "crates/core" }
tensou-cli = { path = "crates/cli" }
tensou-gui = { path = "crates/gui" }

[dependencies]
tensou-core = { workspace = true }
tensou-cli = { workspace = true }
tensou-gui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[package]
name = "tensou"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.19"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true          # Enable Link-Time Optimization (LTO)
codegen-units = 1   # Limit to 1 codegen unit to enable full LTO optimizations
# panic = "abort"     # Remove unwinding information (reduces binary size)
strip = true        # Automatically strip debug symbols from binary

[package.metadata.packager]
product-name = "Tensou"
identifier = "com.tensou.app"
version = "0.1.0"
authors = ["kofta999"]
publisher = "kofta999"
description = "A fast and secure file transfer tool built with QUIC and Slint."
homepage = "https://github.com"
out-dir = "./dist"
before-packaging-command = "cargo build --release"
binaries-dir = "target/release"
formats = ["appimage"]
icons = ["assets/icon.png"]

[[package.metadata.packager.binaries]]
main = true
path = "tensou"
