[package]
name = "tensou-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
tensou-core = { path = "../core" }
tensou-gui = { path = "../gui" }
dialoguer = "0.12.0"
indicatif = "0.18.4"
clap = { version = "4.6.1", features = ["derive"] }
