[package]
name = "tensou-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = "1.8.5"
dirs = { workspace = true }
gethostname = "1.1.0"
mdns-sd = "0.20.0"
quinn = "0.11.9"
rcgen = "0.14.8"
rmp-serde = "1.3.1"
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
walkdir = "2.5.0"
rand = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v4"] }
fs4 = "1.1.0"

[dev-dependencies]
file_diff = "1.0.0"
tempfile = "3.27.0"
