[package]
name = "tensou-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = "1.8.5"
gethostname = "1.1.0"
mdns-sd = "0.20.0"
quinn = "0.11.9"
rcgen = "0.14.8"
rmp-serde = "1.3.1"
walkdir = "2.5.0"
toml = "1.1.2"
fs4 = "1.1.0"

[dev-dependencies]
file_diff = "1.0.0"
tempfile = "3.27.0"
