[package]
name = "tensou-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dirs = "6.0.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
slint = { version = "1.17.0", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software", "software-renderer-path"] }
rfd = "0.17.2"
open = "5.3.0"
arboard = "3.4.0"
tensou-core = { path = "../core" }
chrono = "0.4.45"
urlencoding = "2.1.3"

[build-dependencies]
slint-build = "1.17.0"
