[package]
name = "tensou-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
slint = { version = "1.17.0", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software", "software-renderer-path"] }
rfd = "0.17.2"
open = "5.3.0"
arboard = "3.4.0"
tensou-core = { path = "../core" }
urlencoding = "2.1.3"

[build-dependencies]
slint-build = "1.17.0"
